--- a/package.json
+++ b/package.json
@@ -9,7 +9,23 @@
   "author": "mollymillk <kristey.z39@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.1.0",
+    "postcss": "^8.3.6",
+    "postcss-loader": "^6.1.1",
+    "sass": "^1.36.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "node-sass": "^6.0.1",
+    "postcss-preset-env": "^6.7.0"
   }
 }
