--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.36.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
+    "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2",
