--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-minimizer-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^2.1.0",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
