--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "-": "0.0.1",
     "air-datepicker": "^2.2.3",
+    "html-webpack-inline-svg-plugin": "^2.3.0",
     "jquery": "^3.6.0",
     "node-sass": "^6.0.1",
     "postcss-preset-env": "^6.7.0",
