--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "image-webpack-loader": "^7.0.1",
@@ -34,10 +35,20 @@
     "air-datepicker": "^2.2.3",
     "html-webpack-inline-svg-plugin": "^2.3.0",
     "jquery": "^3.6.0",
+    "loader": "^2.1.1",
+    "mini-svg-data-uri": "^1.3.3",
     "node-sass": "^6.0.1",
     "postcss-preset-env": "^6.7.0",
     "pug": "^3.0.2",
-    "pug-loader": "^2.4.0"
+    "pug-loader": "^2.4.0",
+    "resolve": "^1.20.0",
+    "resolve-url-loader": "^4.0.0",
+    "svg-fill-loader": "0.0.8",
+    "svg-sprite-loader": "^6.0.9",
+    "svg-transform-loader": "^2.0.13",
+    "svg-url-loader": "^7.1.1",
+    "url": "^0.11.0",
+    "url-loader": "^4.1.1"
   },
   "repository": {
     "type": "git",
