--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-sass-svg": "^0.1.0"
   },
   "dependencies": {
     "-": "0.0.1",
