--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "svg-inline-loader": "^0.8.2",
+    "svgo-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.1.4",
     "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2",
@@ -40,6 +41,7 @@
     "mini-svg-data-uri": "^1.3.3",
     "node-sass": "^6.0.1",
     "postcss-preset-env": "^6.7.0",
+    "postcss-svgo": "^5.0.2",
     "pug": "^3.0.2",
     "pug-loader": "^2.4.0",
     "resolve": "^1.20.0",
