--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
   "dependencies": {
     "-": "0.0.1",
     "air-datepicker": "^2.2.3",
+    "autoprefixer": "^10.3.4",
     "html-webpack-inline-svg-plugin": "^2.3.0",
     "jquery": "^3.6.0",
     "loader": "^2.1.1",
+    "mini-css": "^1.0.3",
     "mini-svg-data-uri": "^1.3.3",
     "node-sass": "^6.0.1",
     "postcss-preset-env": "^6.7.0",
