--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack-dev-server",
     "start": "webpack serve --open",
     "build": "webpack",
     "serv": "static build",
@@ -31,6 +32,7 @@
     "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
+    "webpack-livereload-plugin": "^3.0.2",
     "webpack-sass-svg": "^0.1.0"
   },
   "dependencies": {
