--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "html-webpack-inline-svg-plugin": "^2.3.0",
     "jquery": "^3.6.0",
     "loader": "^2.1.1",
+    "material-design-icons": "^3.0.1",
     "mini-css": "^1.0.3",
     "mini-svg-data-uri": "^1.3.3",
     "node-sass": "^6.0.1",
