--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "jquery": "^3.6.0",
     "loader": "^2.1.1",
     "material-design-icons": "^3.0.1",
+    "material-icons": "^1.10.0",
+    "material-icons-subset": "^0.5.0",
     "mini-css": "^1.0.3",
     "mini-svg-data-uri": "^1.3.3",
     "node-sass": "^6.0.1",
